@@ -4,6 +4,7 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/04/24
+	* All mob casted skills have a fixed range of 9 now.
 	* Pressure no longer vaporizes plants.
 2007/04/23
 	* Fixed bug which totally broke item group bonuses.
